# openglcubes

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp  run.sh
src/: init.cpp  main.cpp  utils.cpp
